src/org/api/core/2.0.26/core.redisqueue.md
---
title: "RedisQueue class · @imqueue/core v2.0.26 (archived)"
description: "Class RedisQueue Implements simple messaging queue over redis."
apiCrumbs: [{"name":"API reference","url":"/api/"},{"name":"@imqueue/core","url":"/api/core/2.0.26/"},{"name":"RedisQueue","url":"/api/core/2.0.26/core.redisqueue/"}]
noindex: true
latestUrl: "/api/core/latest/core.redisqueue/"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

# RedisQueue class

Class RedisQueue Implements simple messaging queue over redis.

**Signature:**

```typescript
export declare class RedisQueue extends EventEmitter<EventMap> implements IMessageQueue 
```
**Extends:** EventEmitter&lt;[EventMap](/api/core/2.0.26/core.eventmap/)<!-- -->&gt;

**Implements:** [IMessageQueue](/api/core/2.0.26/core.imessagequeue/)

## Constructors

<table><thead><tr><th>

Constructor


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[(constructor)(name, options, mode)](/api/core/2.0.26/core.redisqueue._constructor_/)


</td><td>


</td><td>

 Constructs a new instance of the `RedisQueue` class


</td></tr>
</tbody></table>

## Properties

<table><thead><tr><th>

Property


</th><th>

Modifiers


</th><th>

Type


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[name](/api/core/2.0.26/core.redisqueue.name/)


</td><td>


</td><td>

string


</td><td>


</td></tr>
<tr><td>

[options](/api/core/2.0.26/core.redisqueue.options/)


</td><td>


</td><td>

[IMQOptions](/api/core/2.0.26/core.imqoptions/)


</td><td>

This queue instance options

 {<!-- -->IMQOptions<!-- -->}


</td></tr>
<tr><td>

[redisKey](/api/core/2.0.26/core.redisqueue.rediskey/)


</td><td>

`readonly`


</td><td>

string


</td><td>

This queue instance unique key (identifier), for internal use


</td></tr>
</tbody></table>

## Methods

<table><thead><tr><th>

Method


</th><th>

Modifiers


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[clear()](/api/core/2.0.26/core.redisqueue.clear/)


</td><td>


</td><td>

Clears queue data in redis


</td></tr>
<tr><td>

[destroy()](/api/core/2.0.26/core.redisqueue.destroy/)


</td><td>


</td><td>

Gracefully destroys this queue


</td></tr>
<tr><td>

[isPublisher()](/api/core/2.0.26/core.redisqueue.ispublisher/)


</td><td>


</td><td>

Returns true if publisher mode is enabled on this queue, false otherwise.

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[isWorker()](/api/core/2.0.26/core.redisqueue.isworker/)


</td><td>


</td><td>

Returns true if worker mode is enabled on this queue, false otherwise.

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[publish(data, toName)](/api/core/2.0.26/core.redisqueue.publish/)


</td><td>


</td><td>

Publishes a message to this queue subscription channel for currently subscribed clients.

If toName specified will publish to PubSub with a different name. This can be used to implement broadcasting some messages to other subscribers on other PubSub channels.


</td></tr>
<tr><td>

[queueLength()](/api/core/2.0.26/core.redisqueue.queuelength/)


</td><td>


</td><td>

Retrieves the current count of messages in the queue


</td></tr>
<tr><td>

[send(toQueue, message, delay, errorHandler)](/api/core/2.0.26/core.redisqueue.send/)


</td><td>


</td><td>

Sends a given message to a given queue (by name)


</td></tr>
<tr><td>

[start()](/api/core/2.0.26/core.redisqueue.start/)


</td><td>


</td><td>

Initializes and starts current queue routines


</td></tr>
<tr><td>

[stop()](/api/core/2.0.26/core.redisqueue.stop/)


</td><td>


</td><td>

Stops current queue routines


</td></tr>
<tr><td>

[subscribe(channel, handler)](/api/core/2.0.26/core.redisqueue.subscribe/)


</td><td>


</td><td>

Creates a subscription channel over redis and sets up channel data read handler


</td></tr>
<tr><td>

[unsubscribe()](/api/core/2.0.26/core.redisqueue.unsubscribe/)


</td><td>


</td><td>

Closes subscription channel

 {<!-- -->Promise<void>}


</td></tr>
</tbody></table>

